--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 body {
   background: #080808;
@@ -14,7 +14,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(images/profile.jpg);
+  background-image: url(images/profile_.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -229,158 +229,161 @@ nav ul li a:hover::after {
   transform: scale(1.1);
 }
 .work:hover .layer {
-    height: 100%;
+  height: 100%;
 }
 .btn {
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #ff004f;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #fff;
+  transition: background 0.5s;
 }
 .btn:hover {
-    background: #ff004f;
+  background: #ff004f;
 }
 
 /* ---------- contact --------- */
 
 .contact-left {
-    flex-basis: 35%;
+  flex-basis: 35%;
 }
 .contact-right {
-    flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .contact-left p {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .contact-left p i {
-    color: #ff004f;
-    margin-right: 15px;
-    font-size: 25px;
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 25px;
 }
 .social-cons {
-    margin-top: 30px;
+  margin-top: 30px;
 }
-.social-cons a{
-    text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    color: #ababab;
-    display: inline-block;
-    transition: transform 0.5s;
+.social-cons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block;
+  transition: transform 0.5s;
 }
 .social-cons a:hover {
-    color: #ff004f;
-    transform: translateY(-5px);
+  color: #ff004f;
+  transform: translateY(-5px);
 }
 .btn.btn2 {
-    display: inline-block;
-    background: #ff004f;
+  display: inline-block;
+  background: #ff004f;
 }
 .contact-right form {
-    width: 100%;
+  width: 100%;
 }
-form input, form textarea {
-    width: 100%;
-    border: 0;
-    outline: none;
-    background: #262626;
-    padding: 15px;
-    margin: 15px 0;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 6px;
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
 }
 form .btn2 {
-    padding: 14px 60px;
-    font-size: 18px;
-    margin-top: 20px;
-    cursor: pointer;
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
 }
 .copyright {
-    width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    background: #262626;
-    font-weight: 300;
-    margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
 }
 .copyright i {
-    color: #ff004f;
+  color: #ff004f;
 }
 
 /* -------- css for small screens -------- */
 nav .fa-solid {
-    display: none;
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
-    #header {
-        background-image: url(images/profile.jpg);
-    }
-    .header-text {
-        margin-top: 100%;
-        font-size: 16px;
-    }
-    .header-text h1 {
-        font-size: 30px;
-    }
-    nav .fa-solid {
-        display: block;
-        font-size: 25px;
-    }
-    nav ul{
-        background: #ff004f;
-        position: fixed;
-        top: 0;
-        right: -200px;
-        width: 200px;
-        height: 100vh;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.5s;
-    }
-    nav ul li {
-        display: block;
-        margin: 25px;
-    }
-    nav ul .fa-solid {
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
-    .sub-title {
-        font-size: 40px;
-    }
-    .about-col-1, .about-col-2 {
-        flex-basis: 100%;
-    }
-    .about-col-1 {
-        margin-bottom: 30px;
-    }
+  #header {
+    background-image: url(images/profile_.jpg);
+  }
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fa-solid {
+    display: block;
+    font-size: 25px;
+  }
+  nav ul {
+    background: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa-solid {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title {
+    font-size: 40px;
+  }
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
 
-    .about-col-2 {
-        font-size: 14px;
-    }
-    .tab-links{
-        font-size: 16px;
-        margin-right: 20px;
-    }
-    .contact-left, .contact-right {
-        flex-basis: 100%;
-    }
-    .copyright {
-        font-size: 14px;
-    }
+  .about-col-2 {
+    font-size: 14px;
+  }
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+  .copyright {
+    font-size: 14px;
+  }
 }
 #msg {
-    color: #61b752;
-    margin-top: -40px;
-    display: block;
+  color: #61b752;
+  margin-top: -40px;
+  display: block;
 }
