--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(images/profile_.jpg);
+  background-image: url(images/profile_.jpeg);
   background-size: cover;
   background-position: center;
 }
@@ -322,7 +322,7 @@ nav .fa-solid {
 
 @media only screen and (max-width: 600px) {
   #header {
-    background-image: url(images/profile_.jpg);
+    background-image: url(images/profile_.jpeg);
   }
   .header-text {
     margin-top: 100%;
